Attempt to add more fixes for the star alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -85,9 +85,9 @@ body {
 
 .starWrapper {
   width: 100%;
-  margin-top: 20px;
+  margin-top: 40px;
   margin-bottom: 40px;
-  padding-top: 40px;
+  padding-top: 20px;
   padding-bottom: 20px;
 }
 
